--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
