--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://www.ebtico.com/$1 [R,L]
+RewriteCond %{SERVER_PORT} 4000
+RewriteRule ^(.*)$ https://ethereumbuckeyetoken.io/$1 [R,L]
